--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,5 @@
 filter:
-  excluded_paths: [tests/*]
+  excluded_paths: [ tests/* ]
 
 build:
   nodes:
@@ -8,7 +8,8 @@ build:
         php:
           version: 8.0
           ini:
-            "xdebug.mode": coverage
+            "xdebug.mode": coverage,
+            memory_limit: "-1"
       tests:
         override:
           - command: vendor/bin/phpunit --coverage-clover=coverage-file
