--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=8.0",,
-        "illuminate/support": "^8.0",
+        "php": ">=8.0",
+        "illuminate/support": "^8.0|^9.0",
         "spatie/image": "^1.10"
     },
     "require-dev": {
