--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,15 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
-        "illuminate/support": "^8.0|^9.0",
-        "spatie/image": "^1.10"
+        "php": "^8.0",
+        "illuminate/support": "^9.0",
+        "spatie/image": "^2.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.2",
-        "orchestra/testbench": "^6.21",
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "orchestra/testbench": "^7.3",
         "phpunit/phpunit": "^9.5",
-        "psalm/plugin-laravel": "^1.5",
-        "vimeo/psalm": "^4.10"
+        "vimeo/psalm": "^4.22"
     },
     "autoload": {
         "psr-4": {
