update scrut conf

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,10 +3,10 @@ filter:
 
 build:
   nodes:
-    tests-with-coverage:
+    analysis:
       environment:
         php:
-          version: 8.0
+          version: 8.1
           ini:
             "xdebug.mode": coverage,
             memory_limit: "-1"
@@ -17,7 +17,6 @@ build:
               file: coverage-file
               format: php-clover
           - php-scrutinizer-run
-
 checks:
   php:
     fix_doc_comments: true
