--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^9.0",
+        "illuminate/support": "^9.0|^10.0",
         "spatie/image": "^2.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.11",
-        "orchestra/testbench": "^7.3",
-        "phpunit/phpunit": "^9.5",
-        "vimeo/psalm": "^4.22"
+        "friendsofphp/php-cs-fixer": "^3.14",
+        "orchestra/testbench": "^8.0",
+        "phpunit/phpunit": "^10.0",
+        "vimeo/psalm": "^5.7"
     },
     "autoload": {
         "psr-4": {
