--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "yaroslawww/laravel-simple-image-manager",
+    "name": "think.studio/laravel-simple-image-manager",
     "description": "Simple package to save multiple images formats when upload an image.",
     "keywords": [
         "laravel",
         "image"
     ],
-    "homepage": "https://github.com/yaroslawww/laravel-simple-image-manager",
+    "homepage": "https://github.com/dev-think-one/laravel-simple-image-manager",
     "license": "MIT",
     "authors": [
         {
             "name": "Yaroslav Georgitsa",
-            "email": "yaroslav.georgitsa@gmail.com",
+            "email": "yg@think.studio",
             "homepage": "https://github.com/yaroslawww",
             "role": "Developer"
         }
@@ -21,10 +21,11 @@
         "spatie/image": "^2.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.14",
-        "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^10.0",
-        "vimeo/psalm": "^5.7"
+        "friendsofphp/php-cs-fixer": "^3.20",
+        "orchestra/testbench": "^8.5",
+        "phpunit/phpunit": "^10.2",
+        "psalm/plugin-laravel": "^2.8",
+        "vimeo/psalm": "^5.13"
     },
     "autoload": {
         "psr-4": {
